--- a/Dafarras/style.css
+++ b/Dafarras/style.css
@@ -3,3 +3,34 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
+.navbar{
+
+    background-color: #5A71C4;
+    padding: 40px;
+   text-align: center;
+   letter-spacing: 1rem;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+.BoxM{
+
+    margin-top: 10px;
+    background-color:  rgb(250, 128, 57);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:200px;
+}
+
+.Item {
+    background:#f7ebeb;
+    padding: 1rem;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
