--- a/Dafarras/style.css
+++ b/Dafarras/style.css
@@ -4,20 +4,44 @@
     box-sizing: border-box;
 }
 
-.navbar{
+header{
+    background-color: #32bcd9;
+}
 
-    background-color: #5A71C4;
-    padding: 40px;
-   text-align: center;
-   letter-spacing: 1rem;
-   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.header-text{
+    text-align: center;
+    padding: 100px;
+    padding-left: 250px;
+    height: 250px;
+    letter-spacing: 0.1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #f5bc19;
+    font-size: xx-large;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+}
+
+.header-container{
+    display: flex;
+    align-items: left;
+}
+
+.logo{
+    max-height: 250px;
+}
+
+.navbar{
+    background-color: #32bcd9;
+    padding: 80px;
+    text-align: center;
+    letter-spacing: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
 .BoxM{
-
     margin-top: 10px;
-    background-color:  rgb(250, 128, 57);
+    background-color:  #f5bc19;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,5 +56,4 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-  }
+}
