--- a/Dafarras/style.css
+++ b/Dafarras/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-image: url(img/miniamborgue_fundo.jpg);
+}
+
 header{
     background-color: #32bcd9;
 }
@@ -11,7 +15,7 @@ header{
 .header-text{
     text-align: center;
     padding: 100px;
-    padding-left: 250px;
+    padding-left: 240px;
     height: 250px;
     letter-spacing: 0.1rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -28,6 +32,7 @@ header{
 
 .logo{
     max-height: 250px;
+    padding-left: 30px;
 }
 
 .navbar{
@@ -41,19 +46,71 @@ header{
 
 .BoxM{
     margin-top: 10px;
-    background-color:  #f5bc19;
+    background-color: #f5bc19;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:200px;
+    padding: 15px;
+    transform: scale(1);
+    transition: o.3s ease;
 }
 
-.Item {
-    background:#f7ebeb;
-    padding: 1rem;
+.BoxM :hover{
+    transform: scale(1.05);    
+}
+
+.Item{
+    background: white;
+    width: 650px;
+    padding: 10px;
     border-radius: 6px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    box-shadow: 0 2px 6px black;
+    display: flex;
+    flex-direction: column;
+    transform: scale(1);
+    transition: 0.3s ease;
+}
+
+.Item :hover{
+    transform: scale(1.005);
+}
+
+.lanche{
+    max-width: 250px;
+    height: auto;
+    display: flex;
+    flex-direction: left;
+}
+
+.lanches-unitarios{
+    width: 750px;
+    margin-top: 10px;
+    margin-left: 400px;
+    background-color: #f5bc19;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 40px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+}
+
+.combos{
+    width: 750px;
+    margin-top: 10px;
+    margin-left: 400px;
+    margin-bottom: 10px;
+    background-color: #f5bc19;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+}
+
+.rodape{
+    background-color: #32bcd9;
+    height: 100px;
+    padding-top: 10px;
 }
