--- a/Dafarras/style.css
+++ b/Dafarras/style.css
@@ -4,50 +4,80 @@
     box-sizing: border-box;
 }
 
-body{
-    background-image: url(img/miniamborgue_fundo.jpg);
-}
-
 header{
     background-color: #32bcd9;
 }
 
 .header-text{
     text-align: center;
-    padding: 100px;
-    padding-left: 240px;
-    height: 250px;
-    letter-spacing: 0.1rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-top: 70px;
+    padding-bottom: 50px;
+    height: 200px;
+    font-family: Arial, Helvetica, sans-serif;
     color: #f5bc19;
     font-size: xx-large;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
 }
 
-.header-container{
-    display: flex;
-    align-items: left;
+#header-container{
+    display: grid;
+    grid-template-columns: 250px 1fr 230px;
+    grid-template-areas: "logo titulo";
+    column-gap: 50px;
 }
 
 .logo{
+    grid-area: logo;
     max-height: 250px;
     padding-left: 30px;
 }
 
-.navbar{
-    background-color: #32bcd9;
-    padding: 80px;
-    text-align: center;
-    letter-spacing: 1rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+body{
+    background-image: url(img/miniamborgue_fundo.jpg);
 }
 
+.navbar{
+    grid-area: titulo;
+    background-color: #32bcd9;
+    text-align: center;
+    letter-spacing: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.colunas {
+    display: grid;
+    grid-template-columns: 250px 1fr 250px; 
+    justify-content: center;
+    padding: 0 100px;
+    margin-top: 20px;
+}
+
+.coluna1 {
+    top: 50px;
+    margin-bottom: 20px;
+    position: sticky;
+    background-color: #f5bc19;
+    height: 700px;
+    width: 250px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+}
+
+.coluna2 {
+    top: 50px;
+    margin-bottom: 20px;
+    position: sticky;
+    background-color: #f5bc19;
+    height: 700px;
+    width: 250px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+}
 
 .BoxM{
     margin-top: 10px;
     background-color: #f5bc19;
-    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 15px;
@@ -65,41 +95,80 @@ header{
     padding: 10px;
     border-radius: 6px;
     box-shadow: 0 2px 6px black;
-    display: flex;
     flex-direction: column;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "titulo titulo" "imagem texto";
+    gap: 20px;
+    margin: 0 auto;
     transform: scale(1);
     transition: 0.3s ease;
+    cursor: default;
 }
 
 .Item :hover{
     transform: scale(1.005);
 }
 
+.Item h3{
+    grid-area: titulo;
+    text-align: center;
+}
+
+.texto {
+    grid-area: texto;
+    display: flex;
+    flex-direction: column; 
+}
+
+.preco {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+button {
+    background-color: #32bcd9;
+    color: white;
+    margin-top: 10px;
+    height: 35px;
+    width: 150px;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: large;
+}
+
 .lanche{
-    max-width: 250px;
-    height: auto;
+    max-width: 200px;
+    height: 200px;
     display: flex;
     flex-direction: left;
 }
 
-.lanches-unitarios{
+#lanches-unitarios{
+    scroll-margin-top: 70px;
+    margin: auto auto 30px;
     width: 750px;
-    margin-top: 10px;
-    margin-left: 400px;
     background-color: #f5bc19;
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
+    padding: 20px;
     border-radius: 6px;
     box-shadow: 0 2px 6px black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.combos{
+#lanches-unitarios h2{
+    text-align: center;
+}
+
+#combos{
+    scroll-margin-top: 50px;
+    margin: 20px auto 10px;
     width: 750px;
-    margin-top: 10px;
-    margin-left: 400px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background-color: #f5bc19;
     display: flex;
     flex-direction: column;
@@ -107,6 +176,45 @@ header{
     padding: 40px;
     border-radius: 6px;
     box-shadow: 0 2px 6px black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#combos h2{
+    text-align: center;
+}
+
+.menu{
+    position: sticky;
+    top: 0;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    background-color: #32bcd9;
+    padding: 6px;             
+    width: 100%;           
+    z-index: 1000;        
+}
+
+.menu a{
+    text-decoration: none;
+    font-size: large;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    transition: 0.3s ease;
+    padding: 4px;
+}
+
+.menu a:hover{
+    color: black;
+    text-decoration: none;
+    background-color: #f5bc19;
+    border-radius: 3px;
+}
+
+.menu li{
+    display: inline;
+    padding: 15px;
 }
 
 .rodape{
