--- a/Dafarras/style.css
+++ b/Dafarras/style.css
@@ -22,14 +22,14 @@ header{
 
 #header-container{
     display: grid;
-    grid-template-columns: 250px 1fr 230px;
+    grid-template-columns: 220px 1fr 220px;
     grid-template-areas: "logo titulo";
     column-gap: 50px;
 }
 
 .logo{
     grid-area: logo;
-    max-height: 250px;
+    max-height: 220px;
     padding-left: 30px;
 }
 
@@ -122,6 +122,39 @@ body{
     flex-direction: column; 
 }
 
+.Item-molho{
+    background: white;
+    width: 550px;
+    padding: 10px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "titulo titulo" "imagem texto";
+    gap: 20px;
+    margin: 0 auto;
+    transform: scale(1);
+    transition: 0.3s ease;
+    cursor: default;
+}
+
+.Item-molho :hover{
+    transform: scale(1.005);
+}
+
+.Item-molho h3{
+    grid-area: titulo;
+    text-align: center;
+}
+
+.texto {
+    grid-area: texto;
+    display: flex;
+    flex-direction: column; 
+}
+
 .preco {
     margin-top: 10px;
     font-weight: bold;
@@ -129,6 +162,8 @@ body{
 
 button {
     background-color: #32bcd9;
+    box-shadow: 0 2px 6px black;
+    border: none;
     color: white;
     margin-top: 10px;
     height: 35px;
@@ -138,9 +173,16 @@ button {
     font-size: large;
 }
 
-.lanche{
+.produtos {
     max-width: 200px;
     height: 200px;
+    display: flex;
+    flex-direction: left;
+}
+
+.molho {
+    max-width: 180px;
+    height: 180px;
     display: flex;
     flex-direction: left;
 }
@@ -173,7 +215,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
+    padding: 20px;
     border-radius: 6px;
     box-shadow: 0 2px 6px black;
     font-family: Arial, Helvetica, sans-serif;
@@ -183,6 +225,76 @@ button {
     text-align: center;
 }
 
+.descricao {
+    text-align: justify;
+    margin-right: 10px;
+    font-size: large;
+}
+
+#extras {
+    display: grid;
+    grid-template-columns: auto auto; 
+    justify-content: center;
+    padding: 0 100px;
+    margin-top: 20px;
+    column-gap: 60px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.sobre {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #f5bc19;
+    height: 300px;
+    width: 600px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+}
+
+.valores {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #f5bc19;
+    height: 300px;
+    width: 600px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+}
+
+.BoxF {
+    margin-top: 10px;
+    background-color: #f5bc19;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    transform: scale(1);
+    transition: o.3s ease;
+}
+
+.BoxF :hover { 
+    transform: scale(1.05);    
+}
+
+.conteudos-extras {
+    background: white;
+    width: 510px;
+    padding: 10px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+    flex-direction: column;
+    display: flex;
+    gap: 20px;
+    margin: 0 auto;
+    transform: scale(1);
+    transition: 0.3s ease;
+    cursor: default;
+}
+
+.conteudos-extras :hover{
+    transform: scale(1.005);
+}
+
 .menu{
     position: sticky;
     top: 0;
@@ -190,6 +302,7 @@ button {
     text-align: center;
     justify-content: center;
     background-color: #32bcd9;
+    box-shadow: 0 6px 12px -8px black;
     padding: 6px;             
     width: 100%;           
     z-index: 1000;        
@@ -221,4 +334,5 @@ button {
     background-color: #32bcd9;
     height: 100px;
     padding-top: 10px;
+    box-shadow: 0 2px 6px black;
 }
