--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body{
 .Item h3{
     grid-area: titulo;
     text-align: center;
+    font-size: x-large;
 }
 
 .texto {
@@ -137,11 +138,6 @@ body{
     transform: scale(1.005);
 }
 
-.Item-molho h3{
-    grid-area: titulo;
-    text-align: center;
-}
-
 .texto {
     grid-area: texto;
     display: flex;
@@ -151,7 +147,7 @@ body{
 .preco {
     margin-top: 10px;
     font-weight: bold;
-    font-size: larger;
+    font-size: x-large;
 }
 
 button {
@@ -160,11 +156,11 @@ button {
     border: none;
     color: white;
     margin-top: 10px;
-    height: 35px;
+    height: 40px;
     width: 150px;
     border-radius: 6px;
     font-weight: bold;
-    font-size: large;
+    font-size: larger;
 }
 
 .produtos {
@@ -177,7 +173,7 @@ button {
 #lanches-unitarios{
     scroll-margin-top: 70px;
     margin: auto auto 30px;
-    width: 850px;
+    width: 820px;
     background-color: #f5bc19;
     display: grid;
     flex-direction: column;
@@ -190,12 +186,13 @@ button {
 
 #lanches-unitarios h2{
     text-align: center;
+    font-size: xx-large;
 }
 
 #combos{
     scroll-margin-top: 50px;
     margin: 20px auto 10px;
-    width: 850px;
+    width: 820px;
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: #f5bc19;
@@ -210,12 +207,13 @@ button {
 
 #combos h2{
     text-align: center;
+    font-size: xx-large;
 }
 
 .descricao {
     text-align: justify;
     margin-right: 10px;
-    font-size: large;
+    font-size: larger;
 }
 
 #extras {
@@ -264,7 +262,7 @@ button {
 
 .valores {
     background: white;
-    width: 500px;
+    width: 800px;
     height: 230px;
     padding: 20px;
     border-radius: 6px;
@@ -285,7 +283,7 @@ button {
 .descricao2 {
     text-align: justify;
     margin-right: 10px;
-    font-size: large;
+    font-size: larger;
 }
 
 .menu{
@@ -303,7 +301,7 @@ button {
 
 .menu a{
     text-decoration: none;
-    font-size: large;
+    font-size: larger;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
