--- a/pias-main/style.css
+++ b/pias-main/style.css
@@ -323,15 +323,27 @@ button {
 
 .rodape{
     background-color: #32bcd9;
-    height: 100px;
+    height: auto;
     padding-top: 10px;
     box-shadow: 0 2px 6px black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
     display: flex;
 }
 
-#img {
+.insta {
+    height: 60px;
+    width: 60px; 
+    display: flex;
+}
 
+.rodape p {
+    text-align: center;
+    margin-top: 20px;
 }
