--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ button {
     padding-top: 10px;
     box-shadow: 0 2px 6px black;
     display: flex;
-    flex-direction: column;7
+    flex-direction: column;
     align-items: center;
     padding: 30px;
     font-family: Arial, Helvetica, sans-serif;
@@ -309,6 +309,7 @@ button {
     height: 50px;
     width: 50px; 
     display: flex;
+    align-items: center;
 }
 
 .rodape p {
