--- a/style.css
+++ b/style.css
@@ -192,6 +192,25 @@ body{
     font-size: xx-large;
 }
 
+#lanches-unitarios2{
+    scroll-margin-top: 50px;
+    margin: 100px auto 100px;
+    width: 820px;
+    background-color: #f5bc19;
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#lanches-unitarios2 h2{
+    text-align: center;
+    font-size: xx-large;
+}
+
 #combos{
     scroll-margin-top: 50px;
     margin: 20px auto 0;
