--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ header{
 
 .header-text{
     text-align: center;
-    padding-top: 70px;
-    padding-bottom: 50px;
+    padding-top: 100px;
     font-family: Arial, Helvetica, sans-serif;
     color: #f5bc19;
     font-size: xx-large;
@@ -28,7 +27,7 @@ header{
 
 .logo{
     grid-area: logo;
-    max-height: 220px;
+    max-height: 250px;
     padding-left: 30px;
 }
 
@@ -83,6 +82,12 @@ body{
     transform: scale(1.05);    
 }
 
+.BoxM2{
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+}
+
 .Item{
     background: white;
     width: 750px;
@@ -109,6 +114,71 @@ body{
     font-size: x-large;
 }
 
+.Item2{
+    background: white;
+    width: 750px;
+    padding: 10px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px black;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    transform: scale(1);
+    transition: 0.3s ease;
+}
+
+.Item2 :hover{
+    transform: scale(1.005);
+}
+
+.Item2 h3{
+    grid-area: titulo;
+    text-align: center;
+    font-size: x-large;
+}
+
+.Item3{
+    padding-left: 70px;
+    height: 20px;
+    margin-bottom: 35px;
+    width: 750px;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.Item3 :hover{
+    transform: scale(1.005);
+}
+
+.Item3 h3{
+    grid-area: titulo;
+    text-align: center;
+    font-size: x-large;
+}
+
+.texto-compras {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 20px;
+    column-gap: 40px;
+    padding-bottom: 20px;
+    align-items: center;
+}
+
+.texto-compras2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 40px;
+    padding-bottom: 20px;
+    align-items: center;
+    transform: scale(1);
+    transition: 0.3s ease;
+}
+
 .texto {
     grid-area: texto;
     display: flex;
@@ -117,7 +187,7 @@ body{
 
 .Item-molho{
     background: white;
-    width: 600px;
+    width: 640px;
     padding: 20px;
     border-radius: 6px;
     box-shadow: 0 2px 6px black;
@@ -133,15 +203,27 @@ body{
 }
 
 .preco {
-    margin-top: 65px;
+    margin-top: 46px;
     font-weight: bold;
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 .preco2 {
-    margin-top: 42px;
+    margin-top: 74px;
     font-weight: bold;
-    font-size: x-large;
+    font-size: xx-large;
+}
+
+.preco3 {
+    margin-top: 18px;
+    font-weight: bold;
+    font-size: xx-large;
+}
+
+.preco4 {
+    margin-top: 91px;
+    font-weight: bold;
+    font-size: xxx-large;
 }
 
 .button {
@@ -153,10 +235,10 @@ body{
     padding: 10px;
     color: white;
     margin-top: 10px;
-    width: 150px;
+    width: 200px;
     border-radius: 6px;
     font-weight: bold;
-    font-size: larger;
+    font-size: x-large;
     transform: scale(1.005);
     transition: 0.3s ease;
 }
@@ -166,9 +248,58 @@ body{
     background-color: #38cae7;
 }
 
+.button2 {
+    background-color: #32bcd9;
+    box-shadow: 0 2px 6px black;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    color: white;
+    margin-top: 10px;
+    width: 150px;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: x-large;
+    transform: scale(1.005);
+    transition: 0.3s ease;
+}
+
+.button2:hover {
+    transform: scale(1.05);
+    background-color: #38cae7;
+}
+
+.button2.ativo {
+    background-color: #44d6f3; 
+    transform: scale(1.05);
+}
+
+.button3 {
+    background-color: #32bcd9;
+    box-shadow: 0 2px 6px black;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    color: white;
+    margin-top: 10px;
+    width: 230px;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: x-large;
+    transform: scale(1.005);
+    transition: 0.3s ease;
+}
+
+.button3:hover {
+    transform: scale(1.05);
+    background-color: #38cae7;
+}
+
 .produtos {
-    max-width: 200px;
-    height: 200px;
+    max-width: 230px;
+    height: 230px;
     display: flex;
     flex-direction: left;
 }
@@ -194,7 +325,7 @@ body{
 
 #lanches-unitarios2{
     scroll-margin-top: 50px;
-    margin: 100px auto 100px;
+    margin: 40px auto 40px;
     width: 820px;
     background-color: #f5bc19;
     display: grid;
@@ -234,7 +365,7 @@ body{
 .descricao {
     text-align: justify;
     margin-right: 10px;
-    font-size: larger;
+    font-size: x-large;
 }
 
 #extras {
@@ -267,7 +398,7 @@ body{
 .sobre {
     background: white;
     width: 500px;
-    height: 230px;
+    height: 320px;
     padding: 20px;
     border-radius: 6px;
     box-shadow: 0 2px 6px black;
@@ -278,8 +409,8 @@ body{
 
 .valores {
     background: white;
-    width: 800px;
-    height: 230px;
+    width: 900px;
+    height: 320px;
     padding: 20px;
     border-radius: 6px;
     box-shadow: 0 2px 6px black;
@@ -296,7 +427,7 @@ body{
 .descricao2 {
     text-align: justify;
     margin-right: 10px;
-    font-size: larger;
+    font-size: x-large;
 }
 
 .menu{
@@ -314,7 +445,7 @@ body{
 
 .menu a{
     text-decoration: none;
-    font-size: larger;
+    font-size: x-large;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
@@ -348,18 +479,24 @@ body{
 }
 
 .insta {
-    height: 50px;
-    width: 50px; 
-    margin-bottom: 15px;
+    height: 55px;
+    width: 55px; 
+    margin-bottom: 20px;
     display: flex;
 }
 
 .info {
-    font-size: larger;
+    font-size: x-large;
     text-decoration: none;
     color: black;
     margin-top: 10px;
     text-align: center;
+}
+
+.wagner {
+    height: 230px;
+    width: auto;
+    margin-top: 20px;
 }
 
 .carrossel {           
